# ScheduleParser

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: continuous-integration.yml
commands/: convert_schedule.py  convert_substitutions.py
src/: __init__.py  constants.py  misc.py  models.py
src/schedule_parser/: __init__.py  constants.py  models.py  utils.py
src/substitutions_test/: constants.py  data.py  main.py  models.py
src/substitutions_test/tables/: substitutions.xlsx  substitutions_old.xlsx
tests/: __init__.py  _test_utils.py  models.py  test_bells.py  test_schedule.py  test_substitutions.py  test_utils.py
tests/resources/data/: bells.json
tests/resources/tables/: schedule.xlsx  substitutions_11_02_26.xlsx  substitutions_12_02_26.xlsx  substitutions_13_02_26.xlsx  substitutions_16_02_26.xlsx  substitutions_17_02_26.xlsx  substitutions_18_02_26.xlsx  substitutions_19_02_26.xlsx  substitutions_20_02_26.xlsx  substitutions_incorrect.xlsx
