[project]
name = "schedule_parser"
version = "1.0.0"
description = "Ты думал тут что-то будет?"
authors = [
    { name = "Denis Titovets <den232titovets@yandex.ru>" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-types (==0.7.0)",
    "blinker (==1.9.0)",
    "certifi (==2026.1.4)",
    "charset-normalizer (==3.4.4)",
    "click (==8.3.1)",
    "colorama (==0.4.6)",
    "et-xmlfile (==2.0.0)",
    "flask (==3.1.2)",
    "idna (==3.11)",
    "itsdangerous (==2.2.0)",
    "jinja2 (==3.1.6)",
    "markupsafe (==3.0.3)",
    "openpyxl (==3.1.5)",
    "pillow (==12.1.0)",
    "psutil (==7.2.1)",
    "pydantic (==2.12.5)",
    "pydantic-core (==2.41.5)",
    "pyquoks (==2.3.2)",
    "requests (==2.32.5)",
    "typing-inspection (==0.4.2)",
    "typing-extensions (==4.15.0)",
    "urllib3 (==2.6.2)",
    "waitress (==3.0.2)",
    "werkzeug (==3.1.4)"
]


[build-system]
requires = ["poetry-core (>=2.0.0, <3.0.0)"]
build-backend = "poetry.core.masonry.api"
