[project]
name = "schedule_parser"
version = "1.0.0"
description = "Ты думал тут что-то будет?"
authors = [
    { name = "Denis Titovets <den232titovets@yandex.ru>" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openpyxl (>=3.1.5)",
    "pydantic (>=2.12.5)",
    "pyquoks (>=2.4.0,<2.5.0)"
]


[build-system]
requires = ["poetry-core (>=2.0.0, <3.0.0)"]
build-backend = "poetry.core.masonry.api"
